# fishbowl

./: README.md  pyproject.toml
src/: config.toml
src/fishbowl/: __main__.py  config.py  entities.py  main.py  world.py
src/fishbowl/intelligence/: __init__.py  actions.py
